RESOLVED FIXED178550
SerializedScriptValue passed to postMessage() cannot be null
https://bugs.webkit.org/show_bug.cgi?id=178550
Summary SerializedScriptValue passed to postMessage() cannot be null
Chris Dumez
Reported 2017-10-19 16:20:48 PDT
SerializedScriptValue passed to postMessage() cannot be null. Therefore, we should use Ref<> type, not RefPtr<>.
Attachments
Patch (8.74 KB, patch)
2017-10-19 16:21 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-10-19 16:21:49 PDT
youenn fablet
Comment 2 2017-10-19 16:26:02 PDT
Comment on attachment 324310 [details] Patch Would be cool to move from unique_ptr to UniqueRef as well.
Chris Dumez
Comment 3 2017-10-19 16:35:27 PDT
(In reply to youenn fablet from comment #2) > Comment on attachment 324310 [details] > Patch > > Would be cool to move from unique_ptr to UniqueRef as well. Channels can be nullptr.
Chris Dumez
Comment 4 2017-10-19 18:34:07 PDT
Comment on attachment 324310 [details] Patch Clearing flags on attachment: 324310 Committed r223732: <https://trac.webkit.org/changeset/223732>
Chris Dumez
Comment 5 2017-10-19 18:34:09 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-11-15 13:01:06 PST
Note You need to log in before you can comment on or make changes to this bug.